# hr_payroll

./: .dockerignore  .env.example  .gitignore  Dockerfile.service  README.md  TECHNICAL_OVERVIEW.md  build_output.txt  conftest.py  db_schemas.md  docker-compose.yml  powershell.cmd  pytest.ini  run_docker_build.bat  schema.sql  system_test_guide.md
.claude/: settings.local.json
docs/: ISSUES.md  NON_TECHNICAL_OVERVIEW.md  README.md  db_schemas.md
docs/schema/: current_schema.sql  (+1 more)
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: apply_v2_migration.sql  audit_models.py  audit_models_v2.py  check_imports.py  db_columns.txt  extract_er.py  fix_attendance.py  fix_employee_schema.sql  fix_imports.py  fix_lucide.py  fix_salary.py  generate_graph.py  init-db.sql  init-minio.sh  migrate_doc_categories.sql  migrate_employee_locations.py  migrate_v2_data.py  migrate_v2_indexes.py  migration_add_client_id.sql  parse_schemas.py  patch_all_services.py  patch_employee_routes.py  patch_frontend_empty.py  patch_frontend_empty2.py  seed.py  seed_compliance.sql  setup_env.py  trigger_approve.py  trigger_generate.py  update_schemas.py
shared/: pyproject.toml
shared/hr_shared/: __init__.py  audit.py  auth.py  base.py  config.py  crypto.py  service.py
tests/: test_e2e.py
(+253 files in other folders)
