[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-shared"
version = "1.0.0"
description = "Shared cross-cutting library for HR & Payroll SaaS V1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
]

[tool.setuptools.packages.find]
include = ["hr_shared*"]
